--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.1.3" />
     <PackageReference Include="Ulid" Version="1.3.4" />
   </ItemGroup>
